--- a/_config.yml
+++ b/_config.yml
@@ -125,13 +125,13 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#A4161A"
-navbar-text-col: "#161A1D"
-navbar-border-col: "#660708"
-page-col: "#FFFFFF"
+navbar-col: "#124559"
+navbar-text-col: "#598392"
+navbar-border-col: "#DDDDDD"
+page-col: "#FFFFF"
 text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
+link-col: "#AEC3B0"
+hover-col: "#598392"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
