--- a/_config.yml
+++ b/_config.yml
@@ -125,13 +125,13 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#103452"
-navbar-text-col: "#1B5788"
+navbar-col: "#05172D"
+navbar-text-col: "#FFFFFF"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
-link-col: "#103452"
-hover-col: "#1B5788"
+link-col: "#008aff"
+hover-col: "#4c85a2"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#1B5788"
